deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: express-ip
  name: express-ip
spec:
  type: NodePort
  selector:
    app: express-ip
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
